--- a/jsApps/launcher/public/index.html
+++ b/jsApps/launcher/public/index.html
@@ -21,6 +21,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Gelasio:ital,wght@0,400;0,700;1,500&display=swap"
+            rel="stylesheet"
+        />
         <title>Deliver app</title>
     </head>
     <body>
